add moskiwi and hidden_catapult to proj.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </p>
         <h3 class="tertiary-text">Blah blah blah</h3>
         <p class="content-paragraph">
-            I am out of content for this page, because this site is a dimping ground<br> for my projects or things and the main page is not a project of its own.<br> If you have and Ideas or wanna share something with me you can contact me<br>
+            I am out of content for this page, because this site is a dumping ground<br> for my projects or things and the main page is not a project of its own.<br> If you have and Ideas or wanna share something with me you can contact me<br>
             <a href="./contact">here</a> or with the man icon in the navigation bar.<br> I want to fill the whole page so there will be some lorem ipsum.
         </p>
         <h3 class="tertiary-text">Lorem Ipsum</h3>
