--- a/projects/index.html
+++ b/projects/index.html
@@ -208,7 +208,7 @@
                     <td><a target="_blank" href="https://github.com/GiggioG/Connect-4-balls">Connect-4-balls Github Repo</a></td>
                 </tr>
                 <tr id="SpaceKitty">
-                    <td><i class="incl-ready"></i>SpaceKitty</td>
+                    <td>SpaceKitty</td>
                     <td>An unfinished game from a game jam.</td>
                     <td><a target="_blank" href="https://github.com/GiggioG/SpaceKitty">SpaceKitty Github Repo</a></td>
                 </tr>
@@ -246,6 +246,16 @@
                     <td><i class="incl-ready"></i>igrata</td>
                     <td>A game my friends from school invented and that I made into an online version</td>
                     <td><a target="_blank" href="https://github.com/GiggioG/igrata">igrata Github Repo</a></td>
+                </tr>
+                <tr id="Moskiwi">
+                    <td><i class="incl-ready"></i>Moskiwi</td>
+                    <td>An almost finished game from a gamejam me and a friend made.</td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/Moskiwi">Moskiwi Github Repo</a></td>
+                </tr>
+                <tr id="hidden_catapult">
+                    <td><i class="incl-ready"></i>Hidden catapult</td>
+                    <td>A catapult hidden in a shoebox. Shoots remotely via BLE with an ESP32.</td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/hidden_catapult">hidden_catapult Github Repo</a></td>
                 </tr>
             </tbody>
             </tbody>
