add C++ STL typedef parser to text tools

--- a/projects/index.html
+++ b/projects/index.html
@@ -47,7 +47,7 @@
         <h1 class="primary-text">Projects</h1>
         This page contains some projects made by me and download links for them.<br> Projects that are ready(ready does not mean no updates) have a <i class="incl-ready"></i> icon next to their name.<br> Projects that are have been scrapped for one reason
         or another have a <i class="incl-canceled"></i> icon next to their name.<br> Projects that I haven't abandoned, but won't work on untill I aquire some new knoledge or motivation have a <i class="incl-paused"></i> icon.
-        <table>
+        <table id="projects">
             <thead>
                 <tr>
                     <th>Name</th>
