add rust read_value to projects

--- a/projects/index.html
+++ b/projects/index.html
@@ -257,6 +257,11 @@
                     <td>A catapult hidden in a shoebox. Shoots remotely via BLE with an ESP32.</td>
                     <td><a target="_blank" href="https://github.com/GiggioG/hidden_catapult">hidden_catapult Github Repo</a></td>
                 </tr>
+                <tr id="rust-read_value">
+					<td><i class="incl-ready"></i>read_value<T>() in rust</td>
+                    <td>Rust library to enter a value from stdin, equivalent to c++'s cin. It took a lot of time and is my first project in rust.</td>
+                    <td><a target="_blank" href="https://gist.github.com/GiggioG/35bd1b4f57f4f45209be6259b9b8a115">read_value.rs Gist</a></td>
+                </tr>
             </tbody>
             </tbody>
         </table>
